# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: project_ci.yml
gendiff/: build_diff.py  generate_diff.py  parse_args.py  parser.py
gendiff/formatters/: plain.py  stylish.py
gendiff/scripts/: gendiff.py  read_json.py  run_diff.py
hexlet_code/: __init__.py  gendiff.py
tests/: test_gendiff.py
