[project]
name = "hexlet-code"
version = "0.1.0"
description = "A project for comparing configuration files"
authors = [{ name = "Toropov Maxim", email = "maxtor2008@mail.ru" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ruff>=0.11.8",
    "pyyaml", 
    "json"
]

[project.scripts]
gendiff = "hexlet_code.scripts.gendiff:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gendiff"]

[tool.pytest.ini_options]
addopts = "--maxfail=3 --durations=10"